implement mindset section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
           </div>
         </div>
       </section>
+      <section class="mindset-section">
+        <h2>Awlays keep a positive mindset</h2>
+        <button>Call Now</button>
+      </section>
     </main>
   </body>
 </html>
