--- a/index.html
+++ b/index.html
@@ -90,8 +90,30 @@
       </section>
       <section class="mindset-section">
         <h2>Awlays keep a positive mindset</h2>
-        <button>Call Now</button>
+        <button class="btn-2">Call Now</button>
       </section>
     </main>
+    <footer class="footer">
+      <div class="future-content">
+        <h2>Future</h2>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words
+        </p>
+        <p>Email : info@gmail.com</p>
+        <p>Phone : 01500 00 00 00</p>
+        <div class="icons">
+          <img src="/images/icons/fb.png" alt="" />
+          <img src="/images/icons/twitter.png" alt="" />
+          <img src="/images/icons/youtube.png" alt="" />
+        </div>
+      </div>
+      <div class="subscribe">
+        <h3>Subscribe</h3>
+        <input type="text" name="" id="" placeholder="Enter your Email"> <br> <br>
+        <button class="btn-2">Subscribe</button>
+      </div>
+    </footer>
   </body>
 </html>
